src/objects/ffbc__FfbcFieldMapping__mdt.object
<CustomObject>
    <description>Contains mappings between object fields to be used in Billing Central processes.</description>
    <fields>
        <fullName>ffbc__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Determines whether the field mapping should be used by the process.</description>
        <inlineHelpText>Determines whether the field mapping should be used by the process.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffbc__Process__c</fullName>
        <description>The process in which to map the specified field values.</description>
        <inlineHelpText>The process in which to map the specified field values.</inlineHelpText>
        <label>Process</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Opportunity to Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffbc__SourceField__c</fullName>
        <description>The field from which to map values.</description>
        <inlineHelpText>The field from which to map values.</inlineHelpText>
        <label>Field From</label>
        <metadataRelationshipControllingField>ffbc__FfbcFieldMapping__mdt.ffbc__SourceObject__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>Field Mappings From</relationshipLabel>
        <relationshipName>SourceFieldMappings</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>ffbc__SourceObject__c</fullName>
        <description>The object type from which to map fields.</description>
        <inlineHelpText>The object type from which to map fields.</inlineHelpText>
        <label>Object From</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Field Mappings From</relationshipLabel>
        <relationshipName>SourceFieldMappings</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>ffbc__TargetField__c</fullName>
        <description>The field which values will be mapped to.</description>
        <inlineHelpText>The field which values will be mapped to.</inlineHelpText>
        <label>Field To</label>
        <metadataRelationshipControllingField>ffbc__FfbcFieldMapping__mdt.ffbc__TargetObject__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>Field Mappings To</relationshipLabel>
        <relationshipName>TargetFieldMappings</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>ffbc__TargetObject__c</fullName>
        <description>The object type whose fields will be mapped to.</description>
        <inlineHelpText>The object type whose fields will be mapped to.</inlineHelpText>
        <label>Object To</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Field Mappings To</relationshipLabel>
        <relationshipName>TargetFieldMappings</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <label>FFBC Field Mapping</label>
    <pluralLabel>FFBC Field Mappings</pluralLabel>
</CustomObject>